@@ -29,7 +29,7 @@ from openquake.calculators.export import export
 from openquake.calculators.extract import extract
 from openquake.calculators.tests import CalculatorTestCase
 from openquake.qa_tests_data.classical import (
-    case_01, case_02, case_12, case_18, case_22, case_23,
+    case_01, case_02, case_03, case_12, case_18, case_22, case_23,
     case_24, case_25, case_26, case_27, case_29, case_32, case_33,
     case_34, case_35, case_37, case_38, case_40, case_41,
     case_42, case_43, case_44, case_47, case_48, case_49,
@@ -98,6 +98,10 @@ class ClassicalTestCase(CalculatorTestCase):
     def test_case_02(self):
         # test for Lanzano2019 with vs30 > 1500
         self.assert_curves_ok(['hazard_curve-PGA.csv'], case_02.__file__)
+
+    def test_case_03(self):
+        # test for min_mag, https://github.com/gem/oq-engine/issues/8941
+        self.assert_curves_ok(['hazard_curve-PGA.csv'], case_03.__file__)
 
     def test_wrong_smlt(self):
         with self.assertRaises(InvalidFile):
