@@ -1,0 +1,37 @@
+[general]
+
+description = Minimum Magnitude Discarding Some Sources
+calculation_mode = classical
+random_seed = 23
+concurrent_tasks = 0
+
+[geometry]
+
+sites = 0 0
+
+[logic_tree]
+
+number_of_logic_tree_samples = 0
+
+[erf]
+
+rupture_mesh_spacing = 2
+width_of_mfd_bin = 0.2
+area_source_discretization = 10.0
+
+[site_params]
+
+reference_vs30_type = measured
+reference_vs30_value = 600.0
+reference_depth_to_2pt5km_per_sec = 5.0
+reference_depth_to_1pt0km_per_sec = 100.0
+
+[calculation]
+
+source_model_logic_tree_file = source_model_logic_tree.xml
+gsim_logic_tree_file = gmpe_logic_tree.xml
+investigation_time = 50.0
+intensity_measure_types_and_levels = {"PGA": logscale(0.005, 2, 5)}
+truncation_level = 3
+maximum_distance = 200.0
+minimum_magnitude = 5.7
