@@ -1,4 +1,5 @@
   [Michele Simionato]
+  * Fixed an error with sources below the minimum_magnitude
   * Introduced support for SLURM (experimental)
   * Fixed bug in conditioned GMFs, due to the station sites being excluded
     from the complete site collection
